sql/test/error/error2_2.exp


update t1 set a = 1 where a = 'hello';
                ^
                |
                 ----- ERROR
Error: line 3, characters 17-17:
Incompatible types for set
